Project is adapted for server execution